# nwp-fdb-polytope-demo

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.use-case  Jenkinsfile  Jenkinsfile.use-case  README.md  clear_notebook_outputs.sh  data_retrieve_from_FDB.html  environment.yaml  index.md  make_snapshots.sh  pyproject.toml  remove_notebook_outputs.sh  verify_clear.sh
base-image/: Dockerfile  Jenkinsfile  env.yaml
benchmark/: config_example.yml  polytope_benchmark.py  requirements.txt  results.md  run_matrix.py
clean_notebooks/: 1_Data_Retrieval_from_FDB_Preprocessing.ipynb  2_Precompute_and_Store_Echotop_to_FDB.ipynb  3_Retrieve_Echotop_and_Regrid.ipynb
demo/base-image/: Dockerfile  env.yaml
demo/notebook/container/: Dockerfile  env.yaml
demo/use-case/: Dockerfile  README.md  requirements.txt
demo/use-case/src/useCase/echo_top/: echo_top.py
demo/use-case/src/useCase/mch_model_data/: mch_model_data.py
demo/use-case/src/useCase/timeseries/: timeseries.py
demo/use-case/src/useCase/total_precipitation/: total_precipitation.py
demo/use-case/src/useCase/wind/: colormap.txt  wind.py
developer_notebooks/FDB/: data_retrieve_from_FDB.ipynb
developer_notebooks/Polytope/: polytope_feature_extraction_icon.ipynb  polytope_retrieve_full_icon_field.ipynb
examples/: Instructions.md  T_2M.py  U_10M.py  config.py  instructions.md  pilot.py
examples/FDB/: README.md
examples/FDB/rea-l-ch1/: profile_2d.yaml  radiation.py  regrid.py  request_model_level.mars  request_surface.mars  test_lazy.py  wind_10M.py  wind_multi_levels.py
examples/FDB/realtime/: data_retrieve_from_FDB.ipynb  data_retrieve_from_FDB_native.ipynb  realtime_radiation.py  realtime_request_model_level.mars  realtime_request_surface.mars  realtime_wind_10M.py  realtime_wind_multi_levels.py
examples/FDB/scripts/: README.md  realtime_radiation.py
examples/Polytope/: feature_bounding_box.ipynb  feature_polygon_country_cut-out.ipynb  feature_time_series.ipynb  feature_trajectory.ipynb  feature_vertical_profile.ipynb  full_field.ipynb  work_with_data_native_grid.ipynb
examples/plot_utils/: load_colormaps.py
examples/plot_utils/colormaps/: pot_vortic.rgb  precip_1h_11lev.rgb
examples/snapshots/: data_retrieve_from_FDB.html  feature_bounding_box.html  feature_polygon_country_cut-out.html  feature_time_series.html  feature_trajectory.html  feature_vertical_profile.html  full_field.html  work_with_data_native_grid.html
host/: install_kernel.sh  kernel.json  uenv-wrapper.sh
internal_use/: Instructions.md  README.md  config.py  internal_use.md  profile.yaml  pyproject.toml  radiation.py  regrid.py  request.mars  request_model_level.mars  request_surface.mars  wind_10M.py  wind_multi_levels.py
jenkins/: base-image.Jenkinsfile  notebook-image.Jenkinsfile  use-case-image.Jenkinsfile
jenkins/demo/: base-image.Jenkinsfile  notebook-image.Jenkinsfile  use-case-image.Jenkinsfile
notebooks/: 1_Data_Retrieval_from_FDB_Preprocessing.ipynb  2_Precompute_and_Store_Echotop_to_FDB.ipynb  3_Retrieve_Echotop_and_Regrid.ipynb  4_Location_and_TimeSeries_Access.ipynb  colormap.txt  plot_utils.py
notebooks/FDB/: 1_Data_Retrieval_from_FDB_Preprocessing.ipynb  2_Precompute_and_Store_Echotop_to_FDB.ipynb  data_retrieve_from_FDB.ipynb  plot_utils
notebooks/Polytope/: config_example.yml  feature_bounding_box.ipynb  feature_polygon_country_cut-out.ipynb  feature_time_series.ipynb  feature_trajectory.ipynb  feature_vertical_profile.ipynb  full_field.ipynb  full_icon_field.ipynb  polytope_bounding_box_feature.ipynb  polytope_feature_extraction_icon.ipynb  polytope_global_rad.ipynb  polytope_mean_2mTemp.ipynb  polytope_polygon_country_cut.ipynb  polytope_polygon_feature.ipynb  polytope_retrieve_full_icon_field.ipynb  polytope_timeseries_feature.ipynb  polytope_vertical_profile_feature.ipynb
notebooks/Polytope/benchmark/: bench_entire_domain.py  bench_fdb.py  bench_poi.py  bench_shape.py
notebooks/plot_utils/: plot_valid_data_frame.py
notebooks/snapshot/: 1_Data_Retrieval_from_FDB_Preprocessing.html  2_Precompute_and_Store_Echotop_to_FDB.html  2_Precompute_and_Store_Echotop_to_FDB.ipynb  3_Retrieve_Echotop_and_Regrid.html  3_Retrieve_Echotop_and_Regrid.ipynb  4_Location_and_TimeSeries_Access.html  4_Location_and_TimeSeries_Access.ipynb  polytope_feature_extraction_icon.html
notebooks/snapshots/: data_retrieve_from_FDB.html  feature_bounding_box.html  feature_polygon_country_cut-out.html  feature_time_series.html  feature_trajectory.html  feature_vertical_profile.html  full_field.html
spack-env/: spack.yaml
src/: util.py
use-case/: Dockerfile  Jenkinsfile  README.md  requirements.txt
use-case/src/useCase/echo_top/: __main__.py  echo_top.py
use-case/src/useCase/timeseries/: __main__.py  timeseries.py
use-case/src/useCase/total_precipitation/: __main__.py  total_precipitation.py
use-case/src/useCase/wind/: __main__.py  wind.py
