[tool.poetry]
name = "nwp-demo"
version = "1.0"
description = "Demo scripts and notebooks for reading and processing forecast data using Polytope."
authors = ["MeteoSwiss"]
package-mode = false

[[tool.poetry.source]]
name = "pypi-mch"
url = "https://service.meteoswiss.ch/nexus/repository/python-all/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "~3.11"

pyfdb = { url = "https://github.com/ecmwf/pyfdb/archive/refs/tags/0.0.3.tar.gz" }

# Replace the PyPI earthkit-plots pin if you want the branch override
earthkit-data = "^0.19.0"
earthkit-plots = "^0.6.0"
earthkit-regrid = { git = "https://github.com/ecmwf/earthkit-regrid.git", branch = "develop" }

# TestPyPI dev builds
eckit = { version = "2.0.3.dev43", source = "testpypi" }
eckitlib = { version = "2.0.3.dev43", source = "testpypi" }
mirlib = { version = "1.28.1.dev43", source = "testpypi" }
mir-python = {version = "^1.27.11.dev26", allow-prereleases = true}
eccodeslib = {version = "2.47.1.dev43", source = "testpypi"}

ipykernel = "^6.29.4"
nbformat = "^5.10.4"
kaleido = "0.2.1"
nbconvert = "^7.16.6"
eccodes = "^2.46.0"

# only available from mch pypi (until officially published by DWD)
eccodes-cosmo-resources-python-internal = {version = "^2.44.0.1", source = "pypi-mch"}

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = "."

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
