[tool.poetry]
name = "nwp-demo"
version = "1.0"
description = "Demo scripts and notebooks for reading and processing forecast data using Polytope."
authors = ["MeteoSwiss"]
package-mode = false

[[tool.poetry.source]]
name = "pypi-mch"
url = "https://service.meteoswiss.ch/nexus/repository/python-all/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "~3.11"
pyfdb = "0.1.3"
fdb-utils = { git = "https://github.com/MeteoSwiss/fdb-utils.git", tag = "v1.3.5"}
ipykernel = "*"
polytope-client = "^0.7.8"
nbconvert = "*"
nbformat = "*"
pyyaml = "*"
kaleido = "0.2.1"
eccodes = "^2.46.0"

# Earthkit 1.0 release candidates
earthkit-utils = { git = "https://github.com/ecmwf/earthkit-utils", branch = "release/1.0.0rc0" }
earthkit-data = { git = "https://github.com/ecmwf/earthkit-data", branch = "release/1.0.0rc0" }
earthkit-geo = { git = "https://github.com/ecmwf/earthkit-geo", branch = "release/1.0.0rc0" }
earthkit-meteo = { git = "https://github.com/ecmwf/earthkit-meteo", branch = "release/1.0.0rc0" }
earthkit-plots = { git = "https://github.com/ecmwf/earthkit-plots", branch = "release/1.0.0rc0" }

# MCH internal pypi (until officially published by DWD)
eccodes-cosmo-resources-python-internal = {version = "^2.44.0.1", source = "pypi-mch"}

# TestPyPI dev builds
eckit = { version = "2.0.3.dev65", source = "testpypi" }
eckitlib = { version = "2.0.3.dev65", source = "testpypi" }
mirlib = { version = "1.28.1.dev65", source = "testpypi" }
mir-python = {version = "1.28.1.dev65", source = "testpypi" }
eccodeslib = {version = "2.47.1.dev65", source = "testpypi"}


[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = "."

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
