[tool.poetry]
name = "nwp-demo"
version = "1.0"
description = "Demo scripts and notebooks for reading and processing forecast data using Polytope."
authors = ["MeteoSwiss"]
package-mode = false

[[tool.poetry.source]]
name = "pypi-mch"
url = "https://service.meteoswiss.ch/nexus/repository/python-all/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.dependencies]
python = "~3.11"
pyfdb = "0.1.3"
fdb-utils = { git = "https://github.com/MeteoSwiss/fdb-utils.git", tag = "v1.3.5"}
ipykernel = "*"
polytope-client = "^0.7.8"
nbconvert = "*"
nbformat = "*"
pyyaml = "*"
kaleido = "0.2.1"
covjsonkit = "^0.2.14"

# Earthkit 1.0 release candidates
earthkit-utils = "~1.0.0rc1"
earthkit-data = {version = "~1.0.0rc2", extras = ["all"]}
earthkit-geo = {version = "~1.0.0rc3", extras = ["all"]}
earthkit-meteo = {version = "~1.0.0rc1", extras = ["all"]}
earthkit-plots = "~1.0.0rc2"

# MCH internal pypi (until officially published by DWD)
eccodes-cosmo-resources-python-internal = {version = "^2.44.0.1", source = "pypi-mch"}

eckit = "~2.0.6.17"
eckitlib = "~2.0.6.17"
mir-python = "~1.28.1.17"
mirlib = "~1.28.1.17"
eccodes = "~2.44.0"
eccodeslib =  "2.46.2.17"


[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = "."

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
